--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Dog Registration</title>
+  <title>Track Paw PH</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -137,7 +137,7 @@
     <div class="hero-card">
 
       <h1>
-        Welcome to Dog Registration System.
+        Welcome to TrackPawPh.
       </h1>
 
       <p>
